# wmdp-main

./: .gitignore  README.md  eval.sh  main.py  pyproject.toml  requirements.txt  run.sh  run1.sh  run_rmu_llama.ipynb  run_rmu_zephyr.ipynb
rmu/: unlearn.py  utils.py
rmu/sam/: __init__.py  sam_optimizer.py
scripts/: _grid_common.sh  grid_alm_sam_adamw_joint.sh  grid_alm_sam_sam_joint2.sh  grid_alm_sam_sam_joint2_nearby.sh  grid_base_adamw_adamw_joint_alm.sh  grid_base_adamw_alm_joint.sh  grid_robust_unlearn_sam.sh  grid_robust_unlearn_sam_alm.sh  grid_sharp_minmax_nomask.sh  grid_sharp_minmax_nomask_alm.sh  grid_uam.sh  grid_uam_alm.sh  sbatch_grid_alm_sam_sam_joint2_nearby.sh  single.sh  slurm_grid_nearby.sbatch  summarize_grid_search_metrics.py  test_alm_sam_sam_joint2.sh
